# Best-Practices-Doctor

./: .editorconfig  .gitattributes  .gitignore  ANTIGRAVITY_NEW_PROJECT_RULES.md  ANTIGRAVITY_RULES.md  BPD_RULES_CATALOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  Makefile  PATCHES_CONSOLIDATED.md  README.md  SECURITY.md  accessibility_fixes_batch_2.md  accessibility_security_fixes.md  build_sidecar.ps1  dev.ps1  mcp-config-portable.json  package.json  pyproject.toml  run-all.cmd  run-all.ps1  run-web.ps1  setup.cmd  setup.ps1  start.cmd  start.ps1
backend/: README.md  config.py  debug_facts.py  main.py  pr-gates.yaml  pyproject.toml  pytest.ini  python-backend.spec  requirements.txt  ruleset.default.yaml
backend/analysis/: README.md  __init__.py  call_graph_index.py  coverage_importer.py  dataflow.py  dependency_graph.py  facts_builder.py  metrics_analyzer.py
backend/api/: auth.py  remediation_routes.py  routes.py
backend/core/: __init__.py  agent_rules.py  agent_rules_generator.py  app_settings.py  ast_cache.py  auto_fix.py  baseline.py  context_profiles.py  detector.py  finding_templates.py  fix_history.py  fix_intelligence.py  fp_feedback.py  hashing.py  incremental.py  job_manager.py  logging_setup.py  path_utils.py  pr_gate.py  project_inventory.py  project_map.py  project_memory.py  project_recommendations.py  regex_scan.py  rule_contracts.py  rule_engine.py  rule_metadata.py  rule_registry.py  rule_registry_drift.py  ruleset.py  ruleset_profiles.py  runtime_contracts.py  sarif.py  scan_history.py  scoring.py  semantic_roles.py  source_masking.py  source_store.py  suppression.py  tailwind_analysis.py  (+3 more)
backend/core/pipeline/: __init__.py  cache_signatures.py  errors.py  models.py  scan_pipeline.py  stage_cache.py
backend/core/remediation/: __init__.py  agent_package.py  ledger.py  models.py  rescan.py  runner.py  storage.py  task_builder.py
backend/rules/: __init__.py  base.py
backend/rules/devops/: __init__.py  _helpers.py  app_debug_not_false_in_production.py  app_env_not_set_to_production.py  ci_cd_hardening_missing.py  env_committed_to_git.py  env_example_missing_or_out_of_sync.py  missing_queue_worker_supervision.py  no_logging_strategy_configured.py  storage_paths_not_in_gitignore.py
backend/rules/laravel/: __init__.py  _dependency_versioning.py  _inertia_helpers.py  _inventory_helpers.py  _route_helpers.py  _security_header_evidence.py  _template.txt  action_class_naming_consistency.py  action_class_suggestion.py  api_debug_trace_leak.py  api_endpoint_missing_idempotency_key.py  api_resource_usage.py  api_response_inconsistent_shape.py  archive_upload_zip_slip_risk.py  asset_versioning_check.py  authorization_bypass_risk.py  authorization_missing_on_sensitive_reads.py  blade_component_no_fallback_slot.py  blade_queries.py  blade_xss_risk.py  broadcast_channel_authorization_missing.py  business_logic_in_migration.py  cache_missing_fallback.py  cache_stampede_risk.py  chunk_missing_for_large_datasets.py  column_selection_suggestion.py  composer_dependency_below_secure_version.py  composite_index_on_tenant_models.py  console_command_missing_tenant_scope.py  contract_suggestion.py  controller_business_logic.py  controller_index_filter_duplication.py  controller_inheritance_inconsistency.py  controller_query_direct.py  controller_returning_view_in_api.py  controller_validation_inline.py  cookie_samesite_missing.py  cors_misconfiguration.py  csrf_exception_wildcard_risk.py  custom_exception_suggestion.py  (+127 more)
backend/rules/php/: __init__.py  _parse_utils.py  array_unpacking_in_loop.py  bulk_insert_missing.py  catch_too_broad.py  circular_dependency.py  command_injection_risk.py  complexity.py  config_in_loop.py  dry_violation.py  exception_swallowing.py  god_class.py  high_coupling_class.py  long_method.py  low_coverage_files.py  missing_return_type_nullable.py  missing_strict_types.py  missing_type_declarations.py  mutable_global_state.py  pcre_redos_risk.py  php_tree_sitter.py  prefer_imports.py  raw_sql.py  sql_injection_risk.py  static_helper_abuse.py  string_concat_in_loop.py  test_coverage_ratio.py  tests_missing.py  too_many_dependencies.py  unsafe_eval.py  unsafe_file_include_variable.py  unsafe_unserialize.py  unused_private_method.py
backend/rules/react/: __init__.py  _error_boundary_helpers.py  accessible_authentication.py  advanced_frontend_props.py  animation_no_pause_control.py  anonymous_default_export_component.py  apgaccordion_disclosure_contract.py  apgcombobox_contract.py  apgmenu_button_contract.py  (+138 more)
backend/rulesets/: balanced.yaml  laravel_context_matrix.yaml  react_context_matrix.yaml  startup.yaml  strict.yaml
backend/schemas/: __init__.py  facts.py  finding.py  metrics.py  project_type.py  report.py
backend/tests/: conftest.py  test_agent_rules.py  test_analysis_performance_infrastructure.py  test_analyzer_trust_regressions.py  test_architecture_variant_fixtures.py  test_auto_fix.py  test_auxiliary_scan_files.py  test_basic.py  test_canonical_false_positives.py  test_cognitive_complexity.py  test_context_profiles_matrix.py  test_contract_param_parser.py  test_controller_service_calls_not_queries.py  test_coverage_importer.py  test_css_tailwind_best_practice_rules.py  test_dataflow_architecture_contract.py  test_dead_code_rules.py  test_dependency_graph_rules.py  test_devops_rules.py  test_dry_violation_false_positives.py  test_dto_suggestion_framework_arrays.py  test_duplicate_route_definition_rule.py  test_duplication_windows.py  test_enum_suggestion_noise.py  test_error_pages_missing_rule.py  test_false_positive_calibrations_20260509.py  test_false_positive_register_20260714.py  test_finding_classification.py  test_fp_feedback.py  test_frontend_symbol_graph.py  test_frontend_test_detection.py  test_god_class_matching.py  test_hashing.py  test_high_noise_rule_refactors.py  test_ignore_migrations_factories.py  test_imposter_inertia_architecture_rules.py  test_inertia_architecture_rules.py  test_inventory_helpers.py  test_inventory_rules.py  test_ioc_instead_of_new_false_positives.py  (+89 more)
(+315 files in other folders)
