[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bpdoctor"
version = "1.0.0"
description = "Best Practices Doctor - Code quality analysis for Laravel/React projects"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Best Practices Doctor Team"}
]
keywords = ["code-quality", "laravel", "react", "static-analysis", "best-practices"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "orjson>=3.10.0",
    "structlog>=24.0.0",
    "xxhash>=3.5.0",
    "diskcache>=5.6.3",
    # Pin the tested native parser set so fresh installs and CI use the same ABI.
    "tree-sitter==0.25.2",
    "tree-sitter-php==0.24.1",
    "tree-sitter-javascript==0.25.0",
    "tree-sitter-typescript==0.23.2",
    "pathspec>=0.12.1",
    "pyyaml>=6.0.1",
    "aiofiles>=23.2.1",
    "httpx>=0.26.0",
    "sse-starlette>=1.8.2",
    "filelock>=3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.6.0",
    "hypothesis>=6.112.0",
    "respx>=0.21.1",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[project.scripts]
bpdoctor = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "build*", "dist*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["tests/", "build/", "dist/", "venv/", ".venv/"]

[tool.ruff.lint]
select = [
    "E4",   # pycodestyle import errors
    "E9",   # pycodestyle runtime/syntax errors
    "F",    # pyflakes
]
ignore = [
    "E501", # line too long (already handled by line-length)
]

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
mypy_path = "."
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
exclude = ["tests/", "build/", "dist/"]
# Current backend modules still carry typed-debt. Keep mypy runnable in CI and
# remove these suppressions incrementally as packages are hardened.
disable_error_code = [
    "arg-type",
    "assignment",
    "attr-defined",
    "call-arg",
    "call-overload",
    "import-untyped",
    "index",
    "list-item",
    "misc",
    "name-defined",
    "no-any-return",
    "no-redef",
    "operator",
    "override",
    "return-value",
    "type-abstract",
    "union-attr",
    "valid-type",
    "var-annotated",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["core", "rules", "schemas", "analysis", "api"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = true
skip_empty = true
sort = "Cover"

[tool.coverage.html]
directory = "coverage_html"
